--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Sidebar/Components/SideBar/SidebarLink.razor
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Sidebar/Components/SideBar/SidebarLink.razor
@@ -1,5 +1,6 @@
 ﻿@namespace TimeWarp.Architecture.Features.Sidebars
 @inherits ParentComponent
+@using CssBuilder = BlazorComponentUtilities.CssBuilder
 
 <li>
   <NavLink href=@Href target=@Target class=@DefaultClass Match=NavLinkMatch.All ActiveClass=@ActiveClass>
