Clean up TimeWarpPage.razor

--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Composites/TimeWarpPage/LeftPane/LeftPane_Header.razor
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Composites/TimeWarpPage/LeftPane/LeftPane_Header.razor
@@ -1,7 +1,14 @@
 @inherits TimeWarpPageSubComponentBase
-@code {
 
+@code
+{
+  protected override void OnInitialized()
+  {
+    base.OnInitialized();
+    BaseClass = "left-pane_header";
+  }
 }
-<div class="left-pane_header placeholder" @attributes=Attributes>
+
+<div class=@BaseCssBuilder>
   @TimeWarpPage?.LeftPane_HeaderContent
 </div>
