--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Composites/TimeWarpPage/RightPane/RightPane_Footer.razor
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Composites/TimeWarpPage/RightPane/RightPane_Footer.razor
@@ -1,6 +1,13 @@
 @inherits TimeWarpPageSubComponentBase
-@code {
 
+@code {
+  protected override void OnInitialized()
+  {
+    base.OnInitialized();
+    BaseClass = "right-pane-footer";
+  }
 }
 
-<div class="right-pane_footer placeholder">RightPane_Footer</div>
+<div class=@BaseCssBuilder>
+  @TimeWarpPage?.RightPane_FooterContent
+</div>
