--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Developer/Pages/TimeWarpExamplePage.razor
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Developer/Pages/TimeWarpExamplePage.razor
@@ -2,13 +2,37 @@
 @inherits BaseComponent
 
 <TimeWarpPage>
+  <LeftPane_HeaderContent>
+    LeftPane_HeaderContent
+  </LeftPane_HeaderContent>
+  <LeftPane_MainContent>
+    LeftPane_MainContent
+  </LeftPane_MainContent>
+  <LeftPane_FooterContent>
+    LeftPane_FooterContent
+  </LeftPane_FooterContent>
+  <RightPane_HeaderContent>
+    RightPane_HeaderContent
+  </RightPane_HeaderContent>
+  <RightPane_FooterContent>
+    RightPane_FooterContent
+  </RightPane_FooterContent>
   <PagePane_HeaderContent>
     PagePane_HeaderContent
   </PagePane_HeaderContent>
   <PagePane_MainContent>
-    PagePane_PageContent
+    PagePane_MainContent
   </PagePane_MainContent>
+  <PagePane_FooterContent>
+    PagePane_FooterContent
+  </PagePane_FooterContent>
+  <AsidePane_HeaderContent>
+    AsidePane_HeaderContent
+  </AsidePane_HeaderContent>
   <AsidePane_MainContent>
-    AsidePane_AsideContent
+    AsidePane_MainContent
   </AsidePane_MainContent>
+  <AsidePane_FooterContent>
+    AsidePane_FooterContent
+  </AsidePane_FooterContent>
 </TimeWarpPage>
