--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Composites/TimeWarpPage/RightPane/RightPane_Main/AsidePane/AsidePane_Footer.razor
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Composites/TimeWarpPage/RightPane/RightPane_Main/AsidePane/AsidePane_Footer.razor
@@ -5,10 +5,10 @@
   protected override void OnInitialized()
   {
     base.OnInitialized();
-    BaseClass = "left-pane_footer";
+    BaseClass = "aside-pane_footer";
   }
 }
 
 <div class=@BaseCssBuilder>
-  @TimeWarpPage?.LeftPane_FooterContent
+  @TimeWarpPage?.AsidePane_FooterContent
 </div>
