--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Composites/TimeWarpPage/RightPane/RightPane_Main/AsidePane/AsidePane_Main.razor
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Composites/TimeWarpPage/RightPane/RightPane_Main/AsidePane/AsidePane_Main.razor
@@ -5,10 +5,18 @@
   protected override void OnInitialized()
   {
     base.OnInitialized();
-    BaseClass = "left-pane_footer";
+    BaseClass = "aside-pane_main";
   }
 }
 
 <div class=@BaseCssBuilder>
-  @TimeWarpPage?.LeftPane_FooterContent
+  @TimeWarpPage?.AsidePane_MainContent
 </div>
+
+<style>
+  @($@"
+    .{Id}.aside-pane_main {{
+       height: 100%;
+    }}
+  ")
+</style>
