--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Composites/TimeWarpPage/RightPane/RightPane_Main/PagePane/PagePane_Header.razor
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Composites/TimeWarpPage/RightPane/RightPane_Main/PagePane/PagePane_Header.razor
@@ -5,10 +5,10 @@
   protected override void OnInitialized()
   {
     base.OnInitialized();
-    BaseClass = "left-pane_footer";
+    BaseClass = "page-pane_header";
   }
 }
 
 <div class=@BaseCssBuilder>
-  @TimeWarpPage?.LeftPane_FooterContent
+  @TimeWarpPage?.PagePane_HeaderContent
 </div>
