Set width: 100% on all the Left Pane members

--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Composites/TimeWarpPage/LeftPane/LeftPane_Footer.razor
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Composites/TimeWarpPage/LeftPane/LeftPane_Footer.razor
@@ -12,3 +12,11 @@
 <div class=@BaseCssBuilder>
   @TimeWarpPage?.LeftPane_FooterContent
 </div>
+
+<style>
+  @($@"
+    .{Id}.left-pane_footer {{
+      width: 100%;
+    }}
+  ")
+</style>
