--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Composites/TimeWarpPage/LeftPane/LeftPane_Header.razor
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Composites/TimeWarpPage/LeftPane/LeftPane_Header.razor
@@ -12,3 +12,11 @@
 <div class=@BaseCssBuilder>
   @TimeWarpPage?.LeftPane_HeaderContent
 </div>
+
+<style>
+  @($@"
+    .{Id}.left-pane_header {{
+      width: 100%;
+    }}
+  ")
+</style>
