--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Composites/TimeWarpPage/LeftPane/LeftPane_Main.razor
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Composites/TimeWarpPage/LeftPane/LeftPane_Main.razor
@@ -16,7 +16,8 @@
 <style>
   @($@"
     .{Id}.left-pane_main {{
-       height: 100%;
+      height: 100%;
+      width: 100%;
     }}
   ")
 </style>
