--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Composites/TimeWarpPage/RightPane/RightPane_Header.razor
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Composites/TimeWarpPage/RightPane/RightPane_Header.razor
@@ -11,3 +11,11 @@
 <div class=@BaseCssBuilder>
   @TimeWarpPage?.RightPane_HeaderContent
 </div>
+
+<style>
+  @($@"
+    .{Id}.right-pane_header {{
+      width: 100%;
+    }}
+  ")
+</style>
