--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Composites/TimeWarpPage/RightPane/RightPane_Main/RightPane_Main.razor
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Composites/TimeWarpPage/RightPane/RightPane_Main/RightPane_Main.razor
@@ -26,7 +26,8 @@
 <style>
   @($@"
     .{Id}.right-pane_main {{
-       height: 100%;
+      height: 100%;
+      width: 100%;
     }}
   ")
 </style>
