--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Application/Components/NavBar/Components/Logo.razor
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Application/Components/NavBar/Components/Logo.razor
@@ -1,3 +1,3 @@
 ﻿@inherits BaseComponent
 
-<img class="hidden lg:block h-8 w-auto" src="@ApplicationState.Logo" alt="TimeWarp.Architecture logo" @attributes=Attributes>
+<img class="timewarp-logo hidden lg:block h-8 w-auto" src="@ApplicationState.Logo" alt="TimeWarp.Architecture logo" @attributes=Attributes>
