--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Developer/Pages/ExampleTimeWarpPage.razor
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Developer/Pages/ExampleTimeWarpPage.razor
@@ -1,7 +1,7 @@
 @namespace TimeWarp.Architecture.Pages
 @inherits BaseComponent
 
-<TimeWarpPage>
+<TimeWarpPage ShowPlaceholders=true>
   <LeftPane_HeaderContent>
     LeftPane_HeaderContent
   </LeftPane_HeaderContent>
