Load downloadFile.js script until we determine if we want in another package or not.

--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Server/Components/App.razor
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Server/Components/App.razor
@@ -41,6 +41,7 @@
 <script src="_content/Microsoft.Authentication.WebAssembly.Msal/AuthenticationService.js"></script>
 <!--#endif -->
 <script src="_framework/blazor.web.js"></script>
+<script src="js/downloadFile.js"></script>
 
 @*TODO: Cramer review PWA block*@
 <!--#if PWA -->
