Move code .razor file

--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Layouts/MainLayout.razor
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Layouts/MainLayout.razor
@@ -1,4 +1,7 @@
 @namespace TimeWarp.Architecture.Components
 @inherits LayoutComponentBase
-
+@code
+{
+  protected const string HeadingHeight = "52px";
+}
 @Body
