Fix link to repo

--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Application/Pages/HomePage.razor
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Application/Pages/HomePage.razor
@@ -18,7 +18,7 @@
             <NavLink href="https://www.nuget.org/profiles/TimeWarp.Enterprises">TimeWarp.Enterprises nugets</NavLink>
           </li>
           <li>
-            <NavLink href="https://timewarpengineering.github.io/blazor-state/"> Blazor State</NavLink>
+            <NavLink href="https://timewarpengineering.github.io/timewarp-state/"> Blazor State</NavLink>
           </li>
           <li>
             <NavLink href="https://github.com/jbogard/MediatR" target="blank">MediatR.</NavLink>
