--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/_Imports.razor
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/_Imports.razor
@@ -13,6 +13,7 @@
 @using Morris.Blazor.FluentValidation
 @using Morris.Blazor.Validation
 @using System.Net.Http.Json
+@using System.Security.Principal
 @using TimeWarp.Architecture.Components
 @using TimeWarp.Architecture.Components.Composites.TimeWarpPage
 @using TimeWarp.Architecture.Features
