--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Composites/TimeWarpPage/TimeWarpPage.razor
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Composites/TimeWarpPage/TimeWarpPage.razor
@@ -45,7 +45,7 @@
 }
 
 <CascadingValue Value="this">
-  <FluentMultiSplitter ref=FluentMultiSplitter Class="timewarp-page" Height="100vh">
+  <FluentMultiSplitter ref=FluentMultiSplitter Class=@($"{Id} timewarp-page") >
     <FluentMultiSplitterPane ref=LeftPane Size="20%" Min="275px" Max="70%" Collapsible=ShowLeftPane Collapsed=@(!ShowLeftPane)>
       <LeftPane />
     </FluentMultiSplitterPane>
@@ -54,3 +54,11 @@
     </FluentMultiSplitterPane>
   </FluentMultiSplitter>
 </CascadingValue>
+
+<style>
+  @($@"
+    .{Id} {{
+      min-height: 100vh;
+    }}
+  ")
+</style>
