Renamed Class to CssClass

--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Composites/TimeWarpPage/RightPane/RightPane.razor
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Composites/TimeWarpPage/RightPane/RightPane.razor
@@ -10,7 +10,7 @@
   protected override void OnInitialized()
   {
     base.OnInitialized();
-    BaseClass = "right-pane";
+    BaseCssClass = "right-pane";
   }
 }
 
