--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Composites/TimeWarpPage/RightPane/RightPane_Footer.razor
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Composites/TimeWarpPage/RightPane/RightPane_Footer.razor
@@ -4,7 +4,7 @@
   protected override void OnInitialized()
   {
     base.OnInitialized();
-    BaseClass = "right-pane_footer";
+    BaseCssClass = "right-pane_footer";
   }
 }
 
