--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Composites/TimeWarpPage/RightPane/RightPane_Main/PagePane/PagePane.razor
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Composites/TimeWarpPage/RightPane/RightPane_Main/PagePane/PagePane.razor
@@ -5,7 +5,7 @@
   protected override void OnInitialized()
   {
     base.OnInitialized();
-    BaseClass = "page-pane";
+    BaseCssClass = "page-pane";
   }
 }
 
