--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Composites/TimeWarpPage/RightPane/RightPane_Main/RightPane_Main.razor
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Composites/TimeWarpPage/RightPane/RightPane_Main/RightPane_Main.razor
@@ -10,7 +10,7 @@
   protected override void OnInitialized()
   {
     base.OnInitialized();
-    BaseClass = "right-pane_main";
+    BaseCssClass = "right-pane_main";
   }
 }
 
