--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Elements/HyperLink.razor
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Elements/HyperLink.razor
@@ -8,7 +8,7 @@
   protected override void OnInitialized()
   {
     base.OnInitialized();
-    BaseClass = "cursor-pointer underline text-gray-600 hover:text-gray-800 visited:text-purple-600";
+    BaseCssClass = "cursor-pointer underline text-gray-600 hover:text-gray-800 visited:text-purple-600";
   }
 
   // private CssBuilder CssBuilder =>
