--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Composites/TimeWarpPage/LeftPane/LeftPane.razor
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Composites/TimeWarpPage/LeftPane/LeftPane.razor
@@ -5,7 +5,7 @@
   protected override void OnInitialized()
   {
     base.OnInitialized();
-    BaseClass = "left-pane";
+    BaseCssClass = "left-pane";
   }
 }
 
