--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Composites/TimeWarpPage/LeftPane/LeftPane_Header.razor
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Composites/TimeWarpPage/LeftPane/LeftPane_Header.razor
@@ -5,7 +5,7 @@
   protected override void OnInitialized()
   {
     base.OnInitialized();
-    BaseClass = "left-pane_header";
+    BaseCssClass = "left-pane_header";
   }
 }
 
