--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Composites/TimeWarpPage/LeftPane/LeftPane_Main.razor
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Composites/TimeWarpPage/LeftPane/LeftPane_Main.razor
@@ -5,7 +5,7 @@
   protected override void OnInitialized()
   {
     base.OnInitialized();
-    BaseClass = "left-pane_main";
+    BaseCssClass = "left-pane_main";
   }
 }
 
