--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Composites/TimeWarpPage/RightPane/RightPane_Header.razor
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Composites/TimeWarpPage/RightPane/RightPane_Header.razor
@@ -4,7 +4,7 @@
   protected override void OnInitialized()
   {
     base.OnInitialized();
-    BaseClass = "right-pane-header";
+    BaseCssClass = "right-pane-header";
   }
 }
 
