--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Composites/TimeWarpPage/RightPane/RightPane_Main/AsidePane/AsidePane_Header.razor
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Composites/TimeWarpPage/RightPane/RightPane_Main/AsidePane/AsidePane_Header.razor
@@ -5,7 +5,7 @@
   protected override void OnInitialized()
   {
     base.OnInitialized();
-    BaseClass = "aside-pane_header";
+    BaseCssClass = "aside-pane_header";
   }
 }
 
