Use ActionSet Functions

--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Pages/SiteFooter.razor
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Pages/SiteFooter.razor
@@ -7,7 +7,7 @@
   private bool IsActive => ActionTrackingState.IsActive;
 
   private async Task ShowAssemblyInfoModal() =>
-    await Send(new ApplicationState.SetActiveModal.Action(ModalId: AssemblyInfoModal.ModalId));
+    await ApplicationState.SetActiveModal(AssemblyInfoModal.ModalId);
 
   protected override void OnInitialized()
   {
