--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Application/Modals/AssemblyInfo/AssemblyInfoModal.razor
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Application/Modals/AssemblyInfo/AssemblyInfoModal.razor
@@ -63,5 +63,5 @@
     return Task.CompletedTask;
   }
 
-  private Task CloseModal() => Send(new ApplicationState.CloseModal.Action());
+  private async Task CloseModal() => await ApplicationState.CloseModal();
 }
