Comment out HeaderBar

--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Sidebar/Components/SideBar/SidebarPage.razor
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Sidebar/Components/SideBar/SidebarPage.razor
@@ -9,7 +9,7 @@
     <Sidebar />
   </div>
   <div class="min-h-screen flex flex-col lg:pl-72 lg:flex lg:flex-col">
-    <HeaderBar />
+    @* <HeaderBar /> *@
     @if (HeaderContent is not null)
     {
       <header class="bg-white shadow" data-qa="HomeHeader">
