--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Pages/Stacked/StackedPage.razor
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Pages/Stacked/StackedPage.razor
@@ -5,7 +5,7 @@
 <div class="flex flex-col min-h-screen font-sans">
     @if (ShowNavBar)
     {
-      <DarkNavBar />
+      @* <DarkNavBar /> *@
     }
 
     @if (HeaderContent is not null)
