Adding ability to toggle between new and old pages until ready to switch.

--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Application/Pages/HomePage.razor
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Application/Pages/HomePage.razor
@@ -6,7 +6,7 @@
 @inject ILogger<HomePage> Logger
 @code
 {
-  private bool ShowOld = true;
+  private readonly bool ShowOld = false;
   private async Task FiveSecondTaskButtonClick() =>
     await ApplicationState.FiveSecondTask(CancellationToken.None);
 
