Update to dotnet 9

--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Routes.razor
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Routes.razor
@@ -1,6 +1,6 @@
 <CascadingAuthenticationState>
   <Router
-    AppAssembly="@typeof(AssemblyMarker).Assembly"
+    AppAssembly=@typeof(AssemblyMarker).Assembly
     AdditionalAssemblies=@(new[] { typeof(AssemblyMarker).Assembly })>
     <Found Context="routeData">
       <AuthorizeRouteView RouteData=@routeData DefaultLayout=@typeof(MainLayout)>
