--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/wwwroot/css/fluent.css
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/wwwroot/css/fluent.css
@@ -1,3 +1,4 @@
 @import '/_content/Microsoft.FluentUI.AspNetCore.Components/css/reboot.css';
-@import '/_content/Microsoft.FluentUI.AspNetCore.Components/Microsoft.FluentUI.AspNetCore.Components.bundle.scp.css';
-@import '/_content/Microsoft.AspNetCore.Components.QuickGrid/Microsoft.AspNetCore.Components.QuickGrid.bundle.scp.css';
+@import '/_content/Microsoft.FluentUI.AspNetCore.Components/Microsoft.FluentUI.AspNetCore.Components.dibzmir27r.bundle.scp.css';
+@import '/_content/Microsoft.AspNetCore.Components.QuickGrid/Microsoft.AspNetCore.Components.QuickGrid.25o87uqmvr.bundle.scp.css';
+  
