feat: Implement page-specific NavLinks via RenderFragment

--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Composites/TimeWarpPage/TimeWarpPage.razor
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Composites/TimeWarpPage/TimeWarpPage.razor
@@ -12,6 +12,7 @@
   [Parameter] public RenderFragment? LeftPane_HeaderContent { get; set; }
   [Parameter] public RenderFragment? LeftPane_MainContent { get; set; }
   [Parameter] public RenderFragment? LeftPane_FooterContent { get; set; }
+  [Parameter] public RenderFragment? NavLink { get; set; }
   [Parameter] public RenderFragment? RightPane_HeaderContent { get; set; }
   [Parameter] public RenderFragment? RightPane_FooterContent { get; set; }
   [Parameter] public RenderFragment? PagePane_HeaderContent { get; set; }
