--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Pages/SitePage/LeftPane_Main.razor
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Pages/SitePage/LeftPane_Main.razor
@@ -11,7 +11,7 @@
     <FluentNavLink Icon=@(new Icons.Regular.Size20.Question()) Href="/" Match=NavLinkMatch.All>Counter</FluentNavLink>
     <FluentNavLink Icon=@(new Icons.Regular.Size20.Question()) Href="/" Match=NavLinkMatch.All>Weather</FluentNavLink>
     <FluentNavLink Icon=@(new Icons.Regular.Size20.Question()) Href="/" Match=NavLinkMatch.All>Superheros</FluentNavLink>
-    <FluentNavLink Icon=@(new Icons.Regular.Size20.Question()) Href="/" Match=NavLinkMatch.All>Chat</FluentNavLink>
+    @TimeWarpPage.NavLink
   </FluentNavGroup>
   <FluentNavGroup Title="Developer">
     <FluentNavLink Icon=@(new Icons.Regular.Size20.Question()) Href=@ExampleTimeWarpPage.GetPageUrl() Match=NavLinkMatch.All>Example TimeWarpPage</FluentNavLink>
