Add NavLink RenderFragement to the pages directly

--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Pages/SitePage/LeftPane_Main.razor
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Components/Pages/SitePage/LeftPane_Main.razor
@@ -1,17 +1,20 @@
 @inherits BaseComponent
-@using Microsoft.FluentUI.AspNetCore.Components
 
 @code {
 
 }
 
 <FluentNavMenu Class=@BaseCssBuilder.ToString()>
-  <FluentNavLink Icon=@(new Icons.Regular.Size20.Home()) Href="/" Match=NavLinkMatch.All>Home</FluentNavLink>
+  @HomePage.NavLink
   <FluentNavGroup Title="Pages">
+    @* @CounterPage.NavLink *@
+    @WeatherForecastsPage.NavLink
+    @* @SuperherosPage.NavLink *@
+    @* @ChatPage.NavLink *@
     <FluentNavLink Icon=@(new Icons.Regular.Size20.Question()) Href="/" Match=NavLinkMatch.All>Counter</FluentNavLink>
     <FluentNavLink Icon=@(new Icons.Regular.Size20.Question()) Href="/" Match=NavLinkMatch.All>Weather</FluentNavLink>
     <FluentNavLink Icon=@(new Icons.Regular.Size20.Question()) Href="/" Match=NavLinkMatch.All>Superheros</FluentNavLink>
-    @TimeWarpPage.NavLink
+    <FluentNavLink Icon=@(new Icons.Regular.Size20.Question()) Href="/" Match=NavLinkMatch.All>Chat</FluentNavLink>
   </FluentNavGroup>
   <FluentNavGroup Title="Developer">
     <FluentNavLink Icon=@(new Icons.Regular.Size20.Question()) Href=@ExampleTimeWarpPage.GetPageUrl() Match=NavLinkMatch.All>Example TimeWarpPage</FluentNavLink>
