--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Chat/Pages/ChatPage.razor
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/Chat/Pages/ChatPage.razor
@@ -1,6 +1,12 @@
 ﻿@namespace TimeWarp.Architecture.Pages
 @inherits BaseComponent
 
+@code
+{
+  private static string Title => "Chat";
+  public static readonly RenderFragment NavLink =
+    @<FluentNavLink Icon=@(new Icons.Regular.Size20.Home()) Href=@GetPageUrl() Match=NavLinkMatch.All>@Title</FluentNavLink>;
+}
 <PageTitle>TimeWarp.Architecture Chat</PageTitle>
 <StackedPage>
     <HeaderContent>Chat</HeaderContent>
