--- a/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/WeatherForecast/Pages/WeatherForecastsPage.razor
+++ b/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Features/WeatherForecast/Pages/WeatherForecastsPage.razor
@@ -4,8 +4,12 @@
 {
   [Parameter] [SupplyParameterFromQuery] public int? Days { get; set; }
 
+  private static string Title => "Weather";
   protected override async Task OnInitializedAsync() =>
     await WeatherForecastsState.FetchWeatherForecasts(Days);
+
+  public static readonly RenderFragment NavLink =
+    @<FluentNavLink Icon=@(new Icons.Regular.Size20.Home()) Href=@GetPageUrl() Match=NavLinkMatch.All>@Title</FluentNavLink>;
 }
 <StackedPage>
   <HeaderContent>Weather Forecasts</HeaderContent>
